--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Package    Version
----------- -------
-pip        23.2.1
-setuptools 68.0.0
-wheel      0.41.2
+Babel==2.12.1
+docxcompose==1.4.0
+docxtpl==0.16.7
+Jinja2==3.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
+python-docx==0.8.11
+pytz==2023.3
+six==1.16.0
